2006-05-23  Ben Elliston  <bje@gnu.org>

	* config/gdb-comm.exp (gdb_comm_load): Brace some expressions.
	* config/i960.exp (i960_spawn): Initialise status.
	* config/netware.exp (${board}_init): Brace some if expressions.
	* lib/dg.exp (dg-test): Brace some expressions.
	* lib/framework.exp (clone_output, log_and_exit, log_summary,
	record_test, pass, fail): Likewise.
	* lib/libgloss.exp (get_multilibs): Likewise.
	* lib/remote.exp (standard_transmit, unix_clean_filename,
	remote_load, check_for_board_status, remote_expect): Likewise.
	* lib/rsh.exp (rsh_exec): Likewise.

2006-05-22  Ben Elliston  <bje@gnu.org>

	* baseboards/cris-sim.exp: Use switch, not case.
	* baseboards/h8300.exp: Likewise.
	* config/base68k.exp (base68k_ld): Brace an if expression.

2006-05-22  Ben Elliston  <bje@gnu.org>

	* runtest.exp, baseboards/basic-sim.exp, baseboards/cf.exp,
	baseboards/cris-sim.exp, baseboards/i960-cyclone.exp,
	baseboards/mcore-moto-sim.exp, baseboards/mips64vr4100-sim.exp,
	baseboards/mmixware-sim.exp, baseboards/op50n.exp,
	baseboards/rom68k-idp.exp, baseboards/sparclite-sim-le.exp,
	baseboards/usparc-cygmon.exp, config/base-config.exp,
	config/base68k.exp, config/ddb-ether.exp, config/ddb.exp,
	config/dos.exp, config/gdb-comm.exp, config/gdb_stub.exp,
	config/i386-bozo.exp, config/i960.exp, config/m68k-emc.exp,
	config/netware.exp, config/sid.exp, config/sim.exp,
	config/tic80.exp, config/unix.exp, config/vxworks.exp,
	lib/debugger.exp, lib/dejagnu.exp, lib/dg.exp, lib/framework.exp,
	lib/ftp.exp, lib/kermit.exp, lib/libgloss.exp, lib/remote.exp,
	lib/rlogin.exp, lib/rsh.exp, lib/target.exp, lib/targetdb.exp,
	lib/telnet.exp, lib/tip.exp, lib/utils.exp: Put braces around if
	expressions throughout.

2006-05-22  Ben Elliston  <bje@gnu.org>

	* lib/framework.exp (open_logs): Use file join where applicable.
	* lib/libgloss.exp (libgloss_link_flags, newlib_link_flags,
	newlib_include_flags, g++_link_flags, libstdc++_link_flags,